# pp

./: .clang-format  .clangd  .gitignore  Makefile
bank/: Makefile  bank_sim  bank_tests
bank/include/: Bank.h  Cli.h  Simulation.h
bank/src/: Bank.cpp  Cli.cpp  Simulation.cpp  main.cpp
bank/tests/: bank_tests.cpp
lab6/histogram/: Makefile  README.md
lab7/atomic-max/: Makefile  README.md
lab7/thread-pool/: Makefile  README.md
lab8/async-file/: Makefile  a.out  b.out
lab8/book-generator/: Makefile
lab8/my-task/: Makefile
lab8/simple-awaiter/: Makefile
lab9/gravity-sim/: Makefile  gravity-sim
lab9/median-blur/: Makefile
lab9/radix-sort/: Makefile  radix-sort
life/: CMakeLists.txt  Makefile  life
life/src/: Field.cpp  Field.h  Generator.cpp  Generator.h  Stepper.cpp  Stepper.h  Visualizer.cpp  Visualizer.h  main.cpp
make-archive/: README.md  main.cpp  make-archive
make-archive/Archive/: Archive.cpp  Archive.h
make-archive/Args/: Args.cpp  Args.h
make-archive/Compression/: Compression.cpp  Compression.h
make-archive/CompressionRun/: CompressionRun.cpp  CompressionRun.h
make-archive/Path/: Path.cpp  Path.h
make-archive/Pipeline/: Pipeline.cpp  Pipeline.h
make-archive/Temp/: Temp.cpp  Temp.h
make-archive/Time/: Time.cpp  Time.h
make-archive/archive/: archive.cpp
make-archive/args/: args.cpp  args.h
make-archive/compression/: compression.cpp  compression.h
make-archive/compression_run/: compression_run.cpp  compression_run.h
make-archive/path/: path.cpp  path.h
make-archive/temp/: temp.cpp  (+1 more)
piano/: Makefile  piano
(+94 files in other folders)
